--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
           distribution: "adopt"
           java-version: 16
       - name: clean build
-        run: ./gradlew.bat clean test --info --stacktrace
+        run: ./gradlew clean test --info --stacktrace
