--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           distribution: "adopt"
           java-version: 16
       - name: -x
-      - run: chmod +x gradlew
+        run: chmod +x gradlew
       - name: clean build
         run: ./gradlew clean test --info --stacktrace
 
